[gd_scene load_steps=2 format=3 uid="uid://blqfu67pm8yq3"]

[ext_resource type="Script" path="res://Main.gd" id="1_pki7g"]

[node name="Main" type="Node2D"]
script = ExtResource("1_pki7g")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = -12.0
offset_top = 4.0
offset_right = 1148.0
offset_bottom = 646.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Start Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
